# dario-keyboard

./: .gitignore  README.md  split_blackpill.yaml  unibody_blackpill.yaml
firmware_blackpill/: Cargo.toml  README.md
firmware_blackpill/src/: lib.rs
kicad/split/: board.kicad_pcb  board.kicad_prl  bottom_plate.kicad_pcb  bottom_plate.kicad_prl  bottom_plate.kicad_pro  top_plate.kicad_pcb  top_plate.kicad_pro
kicad/unibody/: board.kicad_pcb  board.kicad_prl  board.kicad_pro  bottom_plate.kicad_pcb  bottom_plate.kicad_prl  bottom_plate.kicad_pro  top_plate.kicad_pcb  top_plate.kicad_prl
